tests/errors/macro/define_without_line.c
#define A

int main()
{
	float A = 0.0;	// требуется идентификатор
	return 0;
}
